--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://127.0.0.1:8000/api/v1",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
