--- a/package.json
+++ b/package.json
@@ -86,8 +86,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "proxy": "http://127.0.0.1:8000/api/v1"
+    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": [
