--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/websocket": "^1.0.5",
     "axios": "^1.3.4",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -80,6 +81,7 @@
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
+    "websocket": "^1.0.34",
     "workbox-webpack-plugin": "^6.4.1",
     "yup": "^1.0.2"
   },
