--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,3 +18,17 @@ jobs:
         run: npm run build
 #      - name: tests
 #        run: npm run test
+  build_and_pub:
+    needs: init
+    runs-on: ubuntu-latest
+    env:
+      LOGIN: ${{ secrets.DOCKER_LOGIN }}
+      NAME: ${{ secrets.DOCKER_CONTAINER_NAME }}
+    steps:
+      - name: Login to Docker
+        run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
+      - uses: actions/checkout@master
+      - name: Build image
+        run: docker build -t $LOGIN/$NAME:${GITHUB_REF:11} -f Dockerfile .
+      - name: Push image to docker
+        run: docker push $LOGIN/$NAME:${GITHUB_REF:11}
