--- a/package.json
+++ b/package.json
@@ -162,8 +162,9 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^27.5.2",
-    "jest": "^27.5.1",
+    "@types/jest": "^29.0.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.6.2",
     "ts-jest": "^29.1.1"
   }
 }
