--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm install --force
       - name: build project
         run: npm run build
-#      - name: tests
+#      - name: tests-components-ui
 #        run: npm run test
 #  build_and_pub:
 #    needs: init
